1. init passport service

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 <body>
   <h1>Express</h1>
   <p>Welcome to Express</p>
+
+  <a href="/auth/google" class="btn btn-info btn-block">Google Login</a>
 </body>
 
 </html>
